/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package tsunami.plugins.detector.credentials.genericweakcredentialdetector.proto;

option java_multiple_files = true;
option java_outer_classname = "CredentialsProtos";
option java_package = "com.google.tsunami.plugins.detectors.credentials.genericweakcredentialdetector.proto";

// Capturing all the known service default credentials.
message DefaultCredentialsData {
  repeated ServiceDefaultCredentials service_default_credentials = 1;
}

// Represents the default credentials for a single service.
message ServiceDefaultCredentials {
  string service_name = 1;
  repeated string default_usernames = 2;
  repeated string default_passwords = 3;
}
